--- a/sash-cv.tex
+++ b/sash-cv.tex
@@ -1,6 +1,7 @@
 %-------------------------
 % Resume in Latex
 % Author : Sashwat K
+% Current user : Akhil A.B
 %------------------------
 
 \documentclass[letterpaper,11pt]{article}
