--- a/sash-cv.tex
+++ b/sash-cv.tex
@@ -81,8 +81,8 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{https://sashuu6.github.io/}{\Large Sashwat K}} & Email : \href{mailto:sashwat0001@gmail.com}{sashwat0001@gmail.com}\\
-  \href{https://sashuu6.github.io/}{https://sashuu6.github.io} & Mobile : +91 8281962557 \\
+  \textbf{\href{https://theonlyakhil.github.io/}{\Large Akhil A B}} & Email : \href{mailto:akhilnanosoft79@gmail.com}{akhilnanosoft79@gmail.com}\\
+  \href{https://theonlyakhil.github.io}{https://sashuu6.github.io} & Mobile : +91 8281962557 \\
 \end{tabular*}
 
 %-----------EDUCATION-----------------
