--- a/sash-cv.tex
+++ b/sash-cv.tex
@@ -82,7 +82,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{https://theonlyakhil.github.io/}{\Large Akhil A B}} & Email : \href{mailto:akhilnanosoft79@gmail.com}{akhilnanosoft79@gmail.com}\\
-  \href{https://theonlyakhil.github.io}{https://sashuu6.github.io} & Mobile : +91 8281962557 \\
+  \href{https://theonlyakhil.github.io}{https://theonlyakhil.github.io} & Mobile : +91 9074679826 \\
 \end{tabular*}
 
 %-----------EDUCATION-----------------
@@ -90,13 +90,13 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {College of Engineering Trivandrum (CET)}{Thiruvananthapuram, India}
-      {Post Graduation; Masters in Computer Application}{August. 2017 -- April. 2020}
+      {Graduation; B.Tech Applied Electronics and Instrumentation}{August. 2017 -- April. 2020}
     \resumeSubheading
-      {Christ Nagar College}{Thiruvananthapuram, India}
-      {Graduation; Bachelor in Computer Application}{June. 2014 -- May. 2017}
+      {Technical Higher Secondary School Muttada}{Thiruvananthapuram, India}
+      {Higher Secondary; Electronics Service Technology; Score 78\%}{June. 2014 -- May. 2017}
     \resumeSubheading
-      {Kendriya Vidyalaya AirForce Station Akkulam}{Thiruvananthapuram, India}
-      {High School; Computer Science}{April. 2012 -- March. 2014}
+      {Technical High School Sreekaryam}{Thiruvananthapuram, India}
+      {High School; TV Maintenance and Radio; Score: 88\% }{April. 2012 -- March. 2014}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
