--- a/sash-cv.tex
+++ b/sash-cv.tex
@@ -81,7 +81,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{https://theonlyakhil.github.io/}{\Large Akhil A B}} & Email : \href{mailto:akhilnanosoft79@gmail.com}{akhilnanosoft79@gmail.com}\\
+  \textbf{\href{https://theonlyakhil.github.io/}{\Large Akhil A B}} & Email : \href{mailto:akhilab79@gmail.com}{akhilab79@gmail.com}\\
   \href{https://theonlyakhil.github.io}{https://theonlyakhil.github.io} & Mobile : +91 9074679826 \\
 \end{tabular*}
 
@@ -90,13 +90,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {College of Engineering Trivandrum (CET)}{Thiruvananthapuram, India}
-      {Graduation; B.Tech Applied Electronics and Instrumentation}{August. 2017 -- April. 2020}
+      {Graduation; B.Tech Applied Electronics and Instrumentation}{August. 2016 -- April. 2020}
     \resumeSubheading
       {Technical Higher Secondary School Muttada}{Thiruvananthapuram, India}
-      {Higher Secondary; Electronics Service Technology; Score 78\%}{June. 2014 -- May. 2017}
-    \resumeSubheading
-      {Technical High School Sreekaryam}{Thiruvananthapuram, India}
-      {High School; TV Maintenance and Radio; Score: 88\% }{April. 2012 -- March. 2014}
+      {Higher Secondary; Electronics Service Technology; Score 78\%}{June. 2014 -- May. 2016}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
@@ -104,38 +101,23 @@
   \resumeSubHeadingListStart
   \resumeSubheading
       {TechWithUs PVT LTD}{CET, Thiruvananthapuram}
-      {Software Developer}{March 2019 - Present}
+      {Hardware Developer}{March 2019 - Present}
       \resumeItemListStart
         \resumeItem{ExamMarker}
-          {ExamMarker is a product developed using python, electron, javascript, Web and PHP. I contributed in developing the sections that used python, electron and javascript.}
+          {ExamMarker is a product developed using python, electron, javascript, Web and PHP. I contributed in developing the sections that used python, electron and javascript. I handled the hardware part of the device. The hardware includes power management, single board computer and many more.}
       \resumeItemListEnd
     \resumeSubheading
       {IoT Lab}{CET, Thiruvananthapuram}
-      {Student faculty}{September 2017 - January 2019}
+      {Student faculty}{September 2016 - January 2019}
       \resumeItemListStart
         \resumeItem{Arduino UNO}
           {The Arduino UNO is an open-source micro-controller board based on the Microchip ATmega328P micro-controller and developed by Arduino.cc. As a member of student faculty, I was given the chance to take classes on Arduino UNO to the students of CET.}
         \resumeItem{Raspberry Pi}
           {The Raspberry Pi is a tiny and affordable computer that can be used for practical projects and to learn programming. I took workshops on Raspberry Pi.}
+          \resumeItem{LoRa}
+          {LoRa (Long Range) is a spread spectrum modulation technique. It is the first low-cost implementation of chirp spread spectrum for commercial usage.}
       \resumeItemListEnd
-    \resumeSubheading
-      {Appfabs PVT LTD}{Technopark, Thiruvananthapuram, India}
-      {Intern}{May 2018 - September 2018}
-      \resumeItemListStart
-        \resumeItem{Cyber security}
-          {Cybersecurity is the protection of internet-connected systems, including hardware, software and data, from cyberattacks. In a computing context, security comprises cybersecurity and physical security -- both are used by enterprises to protect against unauthorised access to data centres and other computerised systems.}
-      \resumeItemListEnd
-  \resumeSubHeadingListEnd
-  
-%--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
-  \resumeSubHeadingListStart
-    \item{
-      \textbf{Languages}{: Embedded C, Python, Javascript, Bash Script }
-      \hfill
-      \textbf{Technologies}{: Git, Linux, Docker, Electron }
-    }
-  \resumeSubHeadingListEnd
+     \resumeSubHeadingListEnd
 
 %-----------Workshops Taken-----------------
 \section{Workshops Taken}
@@ -145,65 +127,67 @@
       {IOT Lab}{2018}
       \resumeItemListStart
         \resumeItem{Python}
-          {This workshop was conducted by a team of 4 students including me. In this workshop, I handled python session.}
+          {This workshop was conducted by a team of 4 students including me. In this workshop, I handled Communication session.}
       \resumeItemListEnd
       \resumeSubheading
       {Arduino Workshop}{CET, Thiruvananthapuram}
       {IOT Lab}{2018}
       \resumeItemListStart
         \resumeItem{Arduino}
-          {This workshop covered all the sections from Arduino basics, embedded C, micro controller vs micro processor and few basic programs.}
+          {This workshop covered all the sections from Arduino basics, embedded C, micro controller vs micro processor, sensors and few basic programs.}
       \resumeItemListEnd
       
       \resumeSubheading
       {Beaglebone Workshop}{CET, Thiruvananthapuram}
       {IOT Lab}{2018}
       \resumeItemListStart
-        \resumeItem{Linux and Python}
-          {This workshop was conducted by a team of 4 students including me. In this workshop, I handled Linux and Python session.}
+        \resumeItem{Hardware}
+          {This workshop was conducted by a team of 4 students including me. In this workshop, I handled hardware session.}
       \resumeItemListEnd
       
       \resumeSubheading
       {Raspberry Pi Workshop}{CET, Thiruvananthapuram}
-      {Drishti}{2018}
+      {IOT}{2018}
       \resumeItemListStart
         \resumeItem{Pi}
-          {This workshop was conducted at Drishti (Technical Fest, CET). The session included about introduction Raspberry Pi, Linux, working remotely, Python, creating Pi server and home automation using Pi.}
-      \resumeItemListEnd
-      
-      \resumeSubheading
-      {Git Workshop}{Muthoot Institute of Technology and Science, Kochi}
-      {}{2019}
-      \resumeItemListStart
-        \resumeItem{Git}
-          {In this workshop, I took session on Git and Github.}
+          {This workshop was conducted at Drishti (Technical Fest, CET). The session included about introduction Raspberry Pi, Linux, working remotely, Python and home automation using Pi.}
       \resumeItemListEnd
       
   \resumeSubHeadingListEnd
-
-%-----------CONTRIBUTED PROJECTS-----------------
-\section{Contributed Projects}
-  \resumeSubHeadingListStart
-    \resumeSubItem{Python Fingerprint Recognition}
-      { In this project, I have fixed the python errors due to which the program doesn't run. Parent project-\url{https://github.com/kjanko/python-fingerprint-recognition}. My project-\url{https://github.com/sashuu6/python-fingerprint-recognition}.}
-  \resumeSubHeadingListEnd
-
+  
 %-----------MY PROJECTS-----------------
 \section{My Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{3-factor-authenticated-door-lock}
-      { A 3 factor authenticated door lock using Atmega328p, 74HC595 multiplexer, key switch, keypad and RFID. This project is available at \url{https://github.com/sashuu6/3-factor-authenticated-door-lock}.}
-    \resumeSubItem{digital-clock-with-birthday-alarm}
-      {The digital clock with birthday alarm is a DYI alarm built using Arduino UNO, Adafruit OLED and DS 3231 RTC module. This project is available at \url{https://github.com/sashuu6/digital-clock-with-birthday-alarm}.}
-    \resumeSubItem{youtube-sub-count}
-      {The 'Youtube Subscriber and View Counter' is a device made using NodeMCU (ESP8266) and OLED display. You can use this device to view your youtube's subscriber and view count. This project is available at \url{https://github.com/sashuu6/youtube-sub-count}.}
-    \resumeSubItem{simple-home-automation}
-      {A simple home automation using Raspberry Pi Zero W, Particle.io, Google assistant and IFTTT. This project is available at \url{https://github.com/sashuu6/simple-home-automation}.}
-      \resumeSubItem{vOne}
-      {My version of Arduino Uno for board isolation. This project is available at \url{https://github.com/sashuu6/vOne}.}
-       \resumeSubItem{Realtime Barcode Scanner}
-      {My version of Barcode Scanner developed using Python and OpenCV. This project is available at \url{https://github.com/sashuu6/realtime-barcode-scanner}.}
+    \resumeSubItem{Build your own google home}
+      { DIY google home smart speaker using raspberry pi. This project is available at \url{https://github.com/theonlyakhil/Build-your-own-google-home}.}
+       \resumeSubItem{System Information Display Raspberry Pi}
+      {An 0.96 inch OLED display is used for showing system informations of raspberry pi. This project is available at \url{https://github.com/theonlyakhil/system-information-display-for-raspberry-pi}.}
+      \resumeSubItem{CNC Machine}
+      {CNC machine using old DVD drive from computer with GRBL driver and arduino.}
+      \resumeSubItem{Weather Display}
+      {A smart weather display that shows weather forecast informations with a OLED display built in.}
+      \resumeSubItem{Smart Plug}
+      {A plug that can control with google assistant voice commands.}
+      \resumeSubItem{Battery Management unit (BMS)}
+      {A battery management system for portable embedded devices ,using the IC from TI BQ25895. This project is available at \url{https://github.com/theonlyakhil/BQ25895-smart-battery-management-circuit-for-portable-devices}}
+      \resumeSubItem{Smart Switch with status memory}
+      {A Switch that can be controlled via both physically or through mobile phone.}
+      
   \resumeSubHeadingListEnd
 
+%--------PROGRAMMING SKILLS------------
+\section{Programming Skills}
+  \resumeSubHeadingListStart
+    \item{
+      \textbf{Languages}{: Embedded C, Python}
+      \hfill
+      \textbf{Technologies}{: Linux, TKinter}
+    }
+    \item{
+      \textbf{Softwares}{: Atmel Studio, Eagle, Fritzing, KiCAD, EasyEDA, Arduino IDE}
+    }
+
+  \resumeSubHeadingListEnd
+  
 %-------------------------------------------
 \end{document}
