--- a/sash-cv.tex
+++ b/sash-cv.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Sashwat K
+% Author : Akhil A B
 % Current user : Akhil A.B
 %------------------------
 
@@ -104,7 +104,7 @@
       {Hardware Developer}{March 2019 - Present}
       \resumeItemListStart
         \resumeItem{ExamMarker}
-          {ExamMarker is a product developed using python, electron, javascript, Web and PHP. I contributed in developing the sections that used python, electron and javascript. I handled the hardware part of the device. The hardware includes power management, single board computer and many more.}
+          {ExamMarker is a product developed using python, electron, javascript, Web and PHP. I contributed in developing the sections that used python for creating graphical user interface. I handled the hardware part of the device. The hardware includes power management, single board computer and many more.}
       \resumeItemListEnd
     \resumeSubheading
       {IoT Lab}{CET, Thiruvananthapuram}
@@ -184,7 +184,7 @@
       \textbf{Technologies}{: Linux, TKinter}
     }
     \item{
-      \textbf{Softwares}{: Atmel Studio, Eagle, Fritzing, KiCAD, EasyEDA, Arduino IDE}
+      \textbf{Softwares}{: Atmel Studio, Eagle, Fritzing, KiCAD, EasyEDA, Arduino IDE,Android Studio}
     }
 
   \resumeSubHeadingListEnd
