--- a/sash-cv.tex
+++ b/sash-cv.tex
@@ -81,7 +81,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{https://theonlyakhil.github.io/}{\Large Akhil A B}} & Email : \href{mailto:akhilab79@gmail.com}{akhilab79@gmail.com}\\
+  \textbf{\href{https://theonlyakhil.github.io/}{\Large Akhil A B}} & Email : \href{mailto:akhilab979@gmail.com}{akhilab979@gmail.com}\\
   \href{https://theonlyakhil.github.io}{https://theonlyakhil.github.io} & Mobile : +91 9074679826 \\
 \end{tabular*}
 
@@ -172,6 +172,8 @@
       {A battery management system for portable embedded devices ,using the IC from TI BQ25895. This project is available at \url{https://github.com/theonlyakhil/BQ25895-smart-battery-management-circuit-for-portable-devices}}
       \resumeSubItem{Smart Switch with status memory}
       {A Switch that can be controlled via both physically or through mobile phone.}
+      \resumeSubItem{Open CV}
+      {Object detection and object tracking using openCV,for my eyanthra project .}
       
   \resumeSubHeadingListEnd
 
@@ -179,12 +181,12 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-      \textbf{Languages}{: Embedded C, Python}
+      \textbf{Languages}{: Embedded C, Python,C++}
       \hfill
       \textbf{Technologies}{: Linux, TKinter}
     }
     \item{
-      \textbf{Softwares}{: Atmel Studio, Eagle, Fritzing, KiCAD, EasyEDA, Arduino IDE,Android Studio}
+      \textbf{Softwares}{: Atmel Studio, Eagle, Fritzing, KiCAD, EasyEDA, Arduino IDE,Android Studio,Visual Studio code}
     }
 
   \resumeSubHeadingListEnd
